modified:   assets/css/style.css 	new file:   assets/img/HPI_new.gif 	new file:   assets/img/blackBanner.png 	new file:   assets/img/slider/events_hd_450px.jpg 	new file:   assets/img/slider/events_hd_new450px.jpg 	new file:   assets/img/whiteBanner_v3.png 	modified:   events.html 	modified:   events_single.html 	modified:   future_member.html 	modified:   index.html 	modified:   lab_conf-talk.html 	modified:   lab_events.html 	modified:   lab_journal.html 	modified:   lab_research.html 	modified:   ourteam.html 	modified:   people.html 	modified:   professor.html

--- a/events_single.html
+++ b/events_single.html
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
-                    <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right">Join Research</a></div>
+                    <div class="nav-btn-wrap"><a href="future_member.html#enroll" class="btn btn-primary pull-right">Join Research</a></div>
                     <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
                         <li>
                             <a href="index.html" title="Home">Home</a>
@@ -115,38 +115,54 @@
                                 <a href="events.html" class="dropdown-toggle"   data-hover="dropdown" title="Tools" data-animations="zoomIn">Tools<span class="caret"></span></a>
                                 <ul class=" dropdown-menu" role="menu">
                                     <li>
-                                        <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">Pred HPI</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">Greening DB</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank" title="Plant-mSubP">Plant mSubP</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">Lac SubPred</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">Lig Pred</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">Ap-iNet</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">At SubP</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank" title="RB-Pred">RB-Pred</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RS Lpred</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" title="citSATdb">citSATdb</a>
-                                    </li>
+                                    <a href="http://bioinfo.usu.edu/deepHPI/" target="_blank"
+                                        title="deepHPI">deepHPI</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/NECminer/" target="_blank"
+                                        title="NECminer">NECminer</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank"
+                                        title="PredHPI">PredHPI</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank"
+                                        title="GreeningDB">GreeningDB</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank"
+                                        title="citSATdb">citSATdb</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank"
+                                        title="Plant-mSubP">Plant-mSubP</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank"
+                                        title="LacSubPred">LacSubPred</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">LigPred</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">AP-iNET</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank"
+                                        title="AtSubP">AtSubP</a>
+                                </li>
+                                 <li>
+                                    <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
+                                </li>
+                                <li>
+                                    <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank"
+                                        title="RSLpred">RSLpred</a>
+                                </li>
+                                <li>
+                                    <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank"
+                                        title="RB-Pred">RB-Pred</a>
+                                </li>
                                 </ul>
                         </li>
                         <li class="dropdown active">
@@ -569,7 +585,7 @@
                                 <div class="widget-main">
                                     <h2 class="widget-title">Publications</h2>
                                     <ul class="list list-unstyled list-footer-nav">
-                                        <li class="footer_text"><a href="lab_journal.html">Journal Article</a></li>
+                                        <li class="footer_text"><a href="lab_journal.html">Journal Articles</a></li>
                                         <li class="footer_text"><a href="lab_conf-talk.html">Conferences and Talks</a></li>
                                     </ul>
                                 </div>
@@ -637,11 +653,11 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <div class="widget_black_studio_tinymce" id="black-studio-tinymce-4">
-                            <div class="copyright">Copyright 2017 - <a href="https://wpmanageninja.com/">KAABiL Lab</a></div>
+                            <div class="copyright">Copyright 2017 - <a href="index.html">KAABiL Lab</a></div>
                         </div>
                     </div>
                     <div class="col-sm-4 ">
-                        <div class="powredby">Developed and Managed by: <a href="https://wpmanageninja.com/">Kaundal Research Group</a></div>
+                        <div class="powredby">Developed and Managed by: <a href="ourteam.html">Kaundal Research Group</a></div>
                     </div>
                 </div>
             </div>
