--- a/future_member.html
+++ b/future_member.html
@@ -76,7 +76,7 @@
                         </div>
                     </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
-                <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right">Join Research</a></div>
+                <div class="nav-btn-wrap"><a href="#enroll" class="btn btn-primary pull-right">Join Research</a></div>
                 <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
                         <li>
                             <a href="index.html" title="Home">Home</a>
@@ -114,38 +114,54 @@
                                 <a href="events.html" class="dropdown-toggle"   data-hover="dropdown" title="Tools" data-animations="zoomIn">Tools<span class="caret"></span></a>
                                 <ul class=" dropdown-menu" role="menu">
                                     <li>
-                                        <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">Pred HPI</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">Greening DB</a>
-                                    </li>
-                                    <li>
-                                        <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank" title="Plant-mSubP">Plant mSubP</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">Lac SubPred</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">Lig Pred</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">Ap-iNet</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">At SubP</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank" title="RB-Pred">RB-Pred</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RS Lpred</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
-                                    </li>
-                                    <li>
-                                            <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" title="citSATdb">citSATdb</a>
-                                    </li>
+                                    <a href="http://bioinfo.usu.edu/deepHPI/" target="_blank"
+                                        title="deepHPI">deepHPI</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/NECminer/" target="_blank"
+                                        title="NECminer">NECminer</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank"
+                                        title="PredHPI">PredHPI</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank"
+                                        title="GreeningDB">GreeningDB</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank"
+                                        title="citSATdb">citSATdb</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank"
+                                        title="Plant-mSubP">Plant-mSubP</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank"
+                                        title="LacSubPred">LacSubPred</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">LigPred</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">AP-iNET</a>
+                                </li>
+                                <li>
+                                    <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank"
+                                        title="AtSubP">AtSubP</a>
+                                </li>
+                                 <li>
+                                    <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
+                                </li>
+                                <li>
+                                    <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank"
+                                        title="RSLpred">RSLpred</a>
+                                </li>
+                                <li>
+                                    <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank"
+                                        title="RB-Pred">RB-Pred</a>
+                                </li>
                                 </ul>
                         </li>
                         
@@ -192,7 +208,7 @@
                     <p class="future_member-text" style="text-align: justify;">
                         If you would like to join us, we are always looking for <b>independently funded research fellows</b> or
                         <b>extended visitors</b>. Please use the <a href="#enroll"><u>form</u></a> below to exlpore the possible options.
-                        <b>Summer student</b> postions are also available for up to three-four months period.
+                        <b>Summer student</b> postions are also available for up to 3 - 4 months period.
                                            
                     </p>
                     <p class="future_member-text" style="text-align: justify;">A number of research projects are available within  the  general  areas  of 
@@ -211,8 +227,8 @@
                                              Unsupervised learning (Bayesian-based methods) a distinct advantage. 
                                             He/She will need to demonstrate adaptability to the <i>multidisciplinary</i> nature of the projects. Masters and Honours students are 
                                             encouraged to <a href="#enroll"><u>contact</u></a> Dr. Kaundal to express his/her interest.
-                                            <b>Both degree options in either the Department of <a target="_blank" href="https://cs.usu.edu/">Computer Science</a> 
-                                                or Department of <a target="_blank" href="https://psc.usu.edu/">Plants, Soils & Climate</a> are available.</b></p>
+                                            <b>Both degree options in either the <a target="_blank" href="https://cs.usu.edu/">Department of Computer Science</a> 
+                                                or <a target="_blank" href="https://psc.usu.edu/">Department of Plants, Soils & Climate</a> are available.</b></p>
                     <div class="__fm_seg" id="join_reaserch_ln">
                         <figure class="future_member-figure">
                             <img src="assets/img/colorful.JPG"  alt="" class="img-responsive">
@@ -222,8 +238,8 @@
                                                         both to domestic and international students. Knowledge or experience in using scripting languages (Perl, Python) and 
                                                         statistical/mathematical toolkits (e.g. R, Matlab) with some kind of programming experience in  
                                                         any of the languages (C / C++ / Java) is highly desirable.
-                                                        <b>Both degree options in either the Department of <a target="_blank" href="https://cs.usu.edu/">Computer Science</a> 
-                                                            or Department of <a target="_blank" href="https://psc.usu.edu/">Plants, Soils & Climate</a> are available.</b>
+                                                        <b>Both degree options in either the <a target="_blank" href="https://cs.usu.edu/">Department of Computer Science</a> 
+                                                            or <a target="_blank" href="https://psc.usu.edu/">Department of Plants, Soils & Climate</a> are available.</b>
                                                     </p>
 
                        <h3 class="__fm_title" >Key criteria</h3>
@@ -261,7 +277,7 @@
                         </div>
                         <div class="form-group">
                             <label for="InputEmail">Your E-mail<sup style="color: red;">*</sup></label>
-                            <input name="email"  id="InputEmail" type="email" class="form-control" placeholder="Type Your Email">
+                            <input name="email"  id="InputEmail" type="email" class="form-control" placeholder="Type Your E-mail Address">
                         </div>
                         <div class="form-group">
                             <label for="Inputphone">Your Phone <b style="font-weight: normal;">(</b><i style="font-weight: normal;">optional</i><b style="font-weight: normal;">)</b></label>
@@ -366,7 +382,7 @@
                                 <div class="widget-main">
                                     <h2 class="widget-title">Publications</h2>
                                     <ul class="list list-unstyled list-footer-nav">
-                                        <li class="footer_text"><a href="lab_journal.html">Journal Article</a></li>
+                                        <li class="footer_text"><a href="lab_journal.html">Journal Articles</a></li>
                                         <li class="footer_text"><a href="lab_conf-talk.html">Conferences and Talks</a></li>
                                     </ul>
                                 </div>
@@ -434,11 +450,11 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <div class="widget_black_studio_tinymce" id="black-studio-tinymce-4">
-                            <div class="copyright">Copyright 2017 - <a href="https://wpmanageninja.com/">KAABiL Lab</a></div>
+                            <div class="copyright">Copyright 2017 - <a href="index.html">KAABiL Lab</a></div>
                         </div>
                     </div>
                     <div class="col-sm-4 ">
-                        <div class="powredby">Developed and Managed by: <a href="https://wpmanageninja.com/">Kaundal Research Group</a></div>
+                        <div class="powredby">Developed and Managed by: <a href="ourteam.html">Kaundal Research Group</a></div>
                     </div>
                 </div>
             </div>
