--- a/lab_conf-talk.html
+++ b/lab_conf-talk.html
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
-                <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right" >Join Research</a></div>
+                <div class="nav-btn-wrap"><a href="future_member.html#enroll" class="btn btn-primary pull-right" >Join Research</a></div>
                 <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
                     <li>
                         <a href="index.html" title="Home">Home</a>
@@ -178,37 +178,53 @@
                             <a href="events.html" class="dropdown-toggle"   data-hover="dropdown" title="Tools" data-animations="zoomIn">Tools<span class="caret"></span></a>
                             <ul class=" dropdown-menu" role="menu">
                                 <li>
-                                    <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">PredHPI</a>
+                                    <a href="http://bioinfo.usu.edu/deepHPI/" target="_blank"
+                                        title="deepHPI">deepHPI</a>
                                 </li>
                                 <li>
-                                    <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">GreeningDB</a>
+                                    <a href="http://bioinfo.usu.edu/NECminer/" target="_blank"
+                                        title="NECminer">NECminer</a>
                                 </li>
                                 <li>
-                                    <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank" title="Plant-mSubP">Plant-mSubP</a>
+                                    <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank"
+                                        title="PredHPI">PredHPI</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">LacSubPred</a>
+                                    <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank"
+                                        title="GreeningDB">GreeningDB</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">LigPred</a>
+                                    <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank"
+                                        title="citSATdb">citSATdb</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">AP-iNET</a>
+                                    <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank"
+                                        title="Plant-mSubP">Plant-mSubP</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">AtSubP</a>
+                                    <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank"
+                                        title="LacSubPred">LacSubPred</a>
                                 </li>
                                 <li>
-                                        <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank" title="RB-Pred">RB-Pred</a>
+                                    <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">LigPred</a>
                                 </li>
                                 <li>
-                                        <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RSLpred</a>
+                                    <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">AP-iNET</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
+                                    <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank"
+                                        title="AtSubP">AtSubP</a>
+                                </li>
+                                 <li>
+                                    <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" title="citSATdb">citSATdb</a>
+                                    <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank"
+                                        title="RSLpred">RSLpred</a>
+                                </li>
+                                <li>
+                                    <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank"
+                                        title="RB-Pred">RB-Pred</a>
                                 </li>
                             </ul>
                     </li>
@@ -323,12 +339,12 @@
                                 <div class="timeline-meta">
                                     <h3 class="staff-title zoom" onmouseover = "">Phatak S.<sup>^</sup>, Thomas A.,<strong data-toggle="tooltip" data-placement="top">Kaundal R.</strong>, <i data-toggle="tooltip" data-placement="top">Jones R.</i>, Hintze K. and Benninghoff A.</h3>
                                         <!-- <div class="__time">7:00pm</div> -->
-                                    <div class="__loc"><span>Location:</span>The Animal, Dairy and Veterinary Sciences Summer Student Research
+                                    <div class="__loc"><span>Location: </span>The Animal, Dairy and Veterinary Sciences Summer Student Research
                                         Symposium; Utah State University (USU), Logan (UT)</div>
                                     <p class="meta-text">Impact of the Total
                                             Western Diet for Rodents on Colon Mucosal Gene Expression in a Multigenerational Murine Model of
                                             Colitis-associated Colorectal Cancer.
-                                            <em>1st place in flash talk presentation</em>
+                                            <em>1<sup>st</sup> place in flash talk presentation</em>
                                             <button class="btn1 btn info pull-right" style="margin-top: 35px; margin-left: 10px;">Oral presentation</button>
                                     </p>
                                 </div>
@@ -342,7 +358,7 @@
                                 <div class="timeline-meta">
                                     <h3 class="staff-title zoom"><i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b></h3>
                                         <!-- <div class="__time">7:00pm</div> -->
-                                    <div class="__loc"><span>Location:</span>The Annual Student Research Symposium; Utah State University (USU), Logan (UT),
+                                    <div class="__loc"><span>Location: </span>The Annual Student Research Symposium; Utah State University (USU), Logan (UT),
                                         USA</div>
                                     <p class="meta-text">Prediction of Host-Pathogen protein-protein interactions using
                                             machine learning.
@@ -359,7 +375,7 @@
                         <div class="timeline-meta" >
                                     <h3 class="staff-title zoom"><u>Lister M.</u>, <i>Larson R.B.</i> and <b>Kaundal R*.</b></h3>
                                         <!-- <div class="__time">7:00pm</div> -->
-                                    <div class="__loc"><span>Location:</span>The Annual Student Research Symposium; 
+                                    <div class="__loc"><span>Location: </span>The Annual Student Research Symposium; 
                                         Utah State University (USU), Logan (UT),
                                         USA</div>
                                     <p class="meta-text">Centralizing Bioinformatics via High-Performance
@@ -397,7 +413,7 @@
                         <div class="timeline-meta">
                                     <h3 class="staff-title zoom"><u>Lister M.</u>, <i>Larson R.B.</i> and <b>Kaundal R*.</b></h3>
                                         <!-- <div class="__time">7:00pm</div> -->
-                                    <div class="__loc"><span>Location:</span>The Annual Plants, Soils, and Climate Showcase, College of Agriculture
+                                    <div class="__loc"><span>Location: </span>The Annual Plants, Soils, and Climate Showcase, College of Agriculture
                                         and Applied Sciences; Utah State University (USU), Logan (UT), USA</div>
                                     <p class="meta-text">High-Performance Computing for Bioinformatics and the
                                             Challenges of Big -OMICS Data.
@@ -415,7 +431,7 @@
                                 <div class="timeline-meta">
                                     <h3 class="staff-title zoom"><b>Kaundal R<sup>*</sup>.</b>, <u><i>Duhan N.</i></u>, Acharya B., Pudussery M.V., Ferreira J.F.S., Suarez D.L. and Sandhu D<sup>*</sup>.</h3>
                                         <!-- <div class="__time">7:00pm</div> -->
-                                    <div class="__loc"><span>Location:</span>The Annual Plants, Soils, and Climate Showcase, College of Agriculture and
+                                    <div class="__loc"><span>Location: </span>The Annual Plants, Soils, and Climate Showcase, College of Agriculture and
                                         Applied Sciences; Utah State University (USU), Logan (UT), USA</div>
                                     <p class="meta-text">Comparative transcriptomics study of alfalfa (Medicago sativa L.) reveals novel genotype-specific
                                             salt tolerance mechanisms.
@@ -433,7 +449,7 @@
                                 <div class="timeline-meta">
                                     <h3 class="staff-title zoom"><i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b></h3>
                                         <!-- <div class="__time">7:00pm</div> -->
-                                    <div class="__loc"><span>Location:</span>The Annual Plants, Soils, and Climate Showcase, College of Agriculture and Applied Sciences;
+                                    <div class="__loc"><span>Location: </span>The Annual Plants, Soils, and Climate Showcase, College of Agriculture and Applied Sciences;
                                         Utah State University (USU), Logan (UT), USA</div>
                                     <p class="meta-text">Deciphering plant-pathogen interactomes: a study on citrus greening
                                             disease.
@@ -451,7 +467,7 @@
                                 <div class="timeline-meta">
                                     <h3 class="staff-title zoom"><u><i>Ediriweera U.</i> </u> and <b>Kaundal R<sup>*</sup></b></h3>
                                         <!-- <div class="__time">7:00pm</div> -->
-                                    <div class="__loc"><span>Location:</span>The 16 th MidSouth Computational Biology & Bioinformatics Society (MCBIOS)
+                                    <div class="__loc"><span>Location: </span>The 16<sup>th</sup> MidSouth Computational Biology & Bioinformatics Society (MCBIOS)
                                         annual conference; University of Alabama, Birmingham (AL), USA</div>
                                     <p class="meta-text">Computational Prediction of Host-Pathogen Protein Interactions in
                                             Melioidosis pathogen Burkholderia pseudomallei and Human reveals novel Virulence Factors and
@@ -470,7 +486,7 @@
                         <div class="timeline-meta">
                                     <h3 class="staff-title zoom"><i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b></h3>
                                         <!-- <div class="__time">7:00pm</div> -->
-                                    <div class="__loc"><span>Location:</span>The Plant and Animal Genome XXVII International Conference (PAG); Town and
+                                    <div class="__loc"><span>Location: </span>The Plant and Animal Genome XXVII International Conference (PAG); Town and
                                         Country Hotel, San Diego (California), USA</div>
                                     <p class="meta-text">An integrated in silico approach to explore Citrus and HLB host-
                                         pathogen interactions.
@@ -487,7 +503,7 @@
                                 <div class="timeline-meta">
                                     <h3 class="staff-title zoom">Moley L.A.<sup>^</sup> , <i>Jones R.</i>, <b>Kaundal R.<sup>*</sup></b>, Thomas, A.J., Benninghoff, A.D. and Isom, C.</h3>
                                         <!-- <div class="__time">7:00pm</div> -->
-                                    <div class="__loc"><span>Location:</span>The 45 th Annual International Embryo Transfer Society Conference; Sheraton Hotel,
+                                    <div class="__loc"><span>Location: </span>The 45 th Annual International Embryo Transfer Society Conference; Sheraton Hotel,
                                         New Orleans (LA), USA</div>
                                     <p class="meta-text">Gene
                                         expression analysis and DNA methylation patterns of porcine SCNT blastocysts with high and low
