--- a/lab_journal.html
+++ b/lab_journal.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
-                <div class="nav-btn-wrap"><a href="#" class="btn btn-primary pull-right">Join Research</a></div>
+                <div class="nav-btn-wrap"><a href="future_member.html#enroll" class="btn btn-primary pull-right">Join Research</a></div>
                 <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
                     <li>
                         <a href="index.html" title="Home">Home</a>
@@ -113,37 +113,53 @@
                             <a href="events.html" class="dropdown-toggle"   data-hover="dropdown" title="Tools" data-animations="zoomIn">Tools<span class="caret"></span></a>
                             <ul class=" dropdown-menu" role="menu">
                                 <li>
-                                    <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">PredHPI</a>
+                                    <a href="http://bioinfo.usu.edu/deepHPI/" target="_blank"
+                                        title="deepHPI">deepHPI</a>
                                 </li>
                                 <li>
-                                    <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">GreeningDB</a>
+                                    <a href="http://bioinfo.usu.edu/NECminer/" target="_blank"
+                                        title="NECminer">NECminer</a>
                                 </li>
                                 <li>
-                                    <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank" title="Plant-mSubP">Plant-mSubP</a>
+                                    <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank"
+                                        title="PredHPI">PredHPI</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">LacSubPred</a>
+                                    <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank"
+                                        title="GreeningDB">GreeningDB</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">LigPred</a>
+                                    <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank"
+                                        title="citSATdb">citSATdb</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">AP-iNET</a>
+                                    <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank"
+                                        title="Plant-mSubP">Plant-mSubP</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">AtSubP</a>
+                                    <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank"
+                                        title="LacSubPred">LacSubPred</a>
                                 </li>
                                 <li>
-                                        <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank" title="RB-Pred">RB-Pred</a>
+                                    <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">LigPred</a>
                                 </li>
                                 <li>
-                                        <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RSLpred</a>
+                                    <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">AP-iNET</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
+                                    <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank"
+                                        title="AtSubP">AtSubP</a>
+                                </li>
+                                 <li>
+                                    <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
                                 </li>
                                 <li>
-                                        <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" title="citSATdb">citSATdb</a>
+                                    <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank"
+                                        title="RSLpred">RSLpred</a>
+                                </li>
+                                <li>
+                                    <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank"
+                                        title="RB-Pred">RB-Pred</a>
                                 </li>
                             </ul>
                     </li>
